--- a/src/index.css
+++ b/src/index.css
@@ -30,6 +30,21 @@
   z-index: 2;
 }
 
+/* 3D Perspective for hover effects */
+.perspective-1000 {
+  perspective: 1000px;
+}
+
+/* Neon border animation */
+@keyframes neonBorder {
+  0%, 100% {
+    background-position: 0% 50%;
+  }
+  50% {
+    background-position: 100% 50%;
+  }
+}
+
 .group:hover .nav-shimmer {
   width: 100%;
   animation: shimmer 1.1s cubic-bezier(0.4,0,0.2,1) forwards;
